--- a/src/home/myprofile/myprofile.css
+++ b/src/home/myprofile/myprofile.css
@@ -102,3 +102,22 @@
   font-weight: bold;
   color: #333;
 }
+.logout-btn {
+  background-color: transparent;
+  color: #c1121f;
+  border: 1px solid #333;
+  border-radius: 9px;
+  padding: 8px;
+  margin-left: 3px;
+  cursor: pointer;
+}
+
+.login-btn-profilesec {
+  color: #70e000;
+  border: 1px solid #333;
+  border-radius: 9px;
+  margin-left: 3px;
+  background-color: transparent;
+  padding: 8px;
+  cursor: pointer;
+}
