--- a/src/home/notifications/notification.css
+++ b/src/home/notifications/notification.css
@@ -10,6 +10,7 @@
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   z-index: 999;
+  margin-top: 15px;
 }
 
 .notification-list {
