--- a/src/home/mainpage/template1/template1.css
+++ b/src/home/mainpage/template1/template1.css
@@ -10,8 +10,7 @@
     border: 1px solid #ccc;
     background-color: #000000;
     border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    width: 300px;
+    width: 100%;
     color: white;
     max-width: 100%;
     display: flex;
