--- a/src/home/adminview/adminview.css
+++ b/src/home/adminview/adminview.css
@@ -749,9 +749,6 @@
   margin-bottom: 15px;
 }
 
-.filters {
-  margin-bottom: 20px;
-}
 
 .chart-container {
   display: flex;
@@ -793,5 +790,11 @@
 
   .summary {
     width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .main-content {
+    flex-direction: column;
+    align-items: center;
   }
 }
