--- a/src/home/adminview/adminview.css
+++ b/src/home/adminview/adminview.css
@@ -807,3 +807,34 @@
     align-items: center;
   }
 }
+
+.notification-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.notification-item {
+  width: 60%; /* Adjust as needed */
+  background-color: #f0f0f0;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.notification-content {
+  text-align: center;
+}
+
+.notification-content p {
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+@media screen and (max-width: 768px) {
+  .notification-item {
+    width: 90%;
+  }
+}
