--- a/src/home/notifications/notification.css
+++ b/src/home/notifications/notification.css
@@ -1,42 +1,36 @@
 .notifications-container {
-  position: absolute;
-  top: 60px; /* Adjust as needed */
-  right: 10px; /* Adjust as needed */
-  width: 300px; /* Adjust as needed */
-  max-height: 400px; /* Set your maximum height */
-  overflow-y: auto; /* Enable vertical scrollbar when content exceeds max height */
-  background-color: #181B22;
-  border: 1px solid #181B22;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  z-index: 999;
+  top: 70px;
+  right: 20px;
+  width: 300px;
+  max-height: 100vh;
+  overflow-y: auto;
+  background-color: #1e2128;
+  border: 1px solid #333;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   margin-top: 15px;
 }
 
-.notification-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  max-height: 350px; /* Adjust as needed */
-  overflow-y: auto; /* Enable scrollbar for the list */
-}
 .notifications-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
+  padding: 12px 20px;
+  border-bottom: 1px solid #444;
+  border-radius: 8px 8px 0 0;
 }
 
 .notification-list {
   list-style: none;
   padding: 0;
   margin: 0;
+  max-height: 300px;
+  overflow-y: auto;
 }
 
 .notification-item {
-  padding: 10px;
-  border-bottom: 1px solid #eee;
+  padding: 12px 20px;
+  border-bottom: 1px solid #333;
 }
 
 .notification-content {
@@ -44,18 +38,25 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .close-btn-noti {
-  background-color: #333;
+  background-color: #444;
   border: none;
- padding: 12px 17px;
- border-radius: 9px;
- cursor: pointer;
+  padding: 8px 15px;
+  border-radius: 6px;
+  cursor: pointer;
   color: white;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.close-btn-noti:hover {
+  background-color: #555;
 }
 
 .notification-message {
-  margin-bottom: 5px;
-  color: rgb(255, 255, 255);
+  margin-bottom: 8px;
+  color: #fff;
 }
 
 .notification-time {
