--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -1,494 +1,67 @@
-@media (min-width: 312px) and (max-width: 480px) {
-  .maindivefordropmentmainpage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: black;
-  }
-  .left-content   {
-    display: none;
-  }
-  .right-content {
-    display: none;
-  }
-  
-  .dropmentmainheader {
-    width: 100%;
-    background-color: #000000;
-    box-shadow: 0 1px 1px rgb(255, 255, 255);
-    z-index: 1;
-    color: black;
-    padding: 10px 0; /* Adjust padding as needed */
-    border-radius: 15px;
-  }
-  .add-shop-btn-home-header {
-    background-color: transparent;
-    color: #06d6a0;
-    border: 1px solid #333;
-    padding: 8px 8px;
-    border-radius: 9px;
-  }
-  
-  .dropmentlogomainpage {
-    margin-right: 0px;
-  }
-  
-  .dropmentlogomainpage img {
-    max-height: 50px; /* Adjust as needed */
-  }
-  
-  .dropmentmainbtns {
-    display: flex;
-    flex-wrap: wrap; /* Allow button wrapping */
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .dropmentmainbtns button {
-    margin: 0 8px; /* Adjust margin as needed */
-    background-color: transparent;
-    border: 1px solid transparent;
-    cursor: pointer;
-    border-radius: 9px;
-    color: rgb(255, 255, 255);
-  }
-  .dropmentmainbtns img {
-    width: 30px;
-  }
-  .section1inmainpage {
-    display: flex;
-    flex-direction: column; /* Stack items vertically on small screens */
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-  }
-  
-  .content-container {
-    display: flex;
-    flex-direction: column; /* Stack items vertically on small screens */
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 1200px; /* Adjust as needed */
-  }
-  
-  .middle-content {
-    flex: 1;
-    width: 100%; /* Occupy full width on small screens */
-    max-width: none; /* Reset max-width for full width */
-    margin: 0; /* Remove margin on small screens */
-  }
-  
-  .recomprofilemainpagetxtp,
-  .recomprofilemainpagetxt {
-    text-align: center;
-    margin: 0 10px; /* Add some margin to improve readability on small screens */
-  }
-  .blinkfeed-btn-main-pg button {
-    background-color: transparent;
-    color: white;
-    border: 2px solid #333;
-    border-radius: 25px;
-    padding: 10px 20px;
-    margin-top: 10px;
-    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
-    cursor: pointer;
-  }
-  .blinkfeed-btn-main-pg button:hover {
-    background-color: transparent;
-    color: #ffffff;
-    border: 2px solid #000000;
-    transition: 0.3s;
-  }
-  
-  }
-  
-  @media (min-width: 481px) and (max-width: 768px) {
-    .blinkfeed-btn-main-pg button {
-      background-color: transparent;
-      color: white;
-      border: 2px solid #333;
-      border-radius: 25px;
-      padding: 10px 20px;
-      margin-top: 10px;
-      transition: background-color 0.3s, color 0.3s, border-color 0.3s;
-      cursor: pointer;
-    }
-    .left-content   {
-      display: none;
-    }
-    .right-content {
-      display: none;
-    }
-    .blinkfeed-btn-main-pg button:hover {
-      background-color: transparent;
-      color: #ffffff;
-      border: 2px solid #ffffff;
-      transition: 0.3s;
-    }
-    .add-shop-btn-main-page-dropment button {
-      color: white;
-      background-color: #16895A;
-      border: 2px solid #16895A;
-      border-radius: 9px;
-      padding: 10px 20px;
-      margin-left: 100px;
-      text-align: center;
-      align-items: center;
-    }
-    .maindivefordropmentmainpage {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    
-    .dropmentmainheader {
-      width: 100%;
-      background-color: #000000;
-      box-shadow: 0 1px 1px rgb(255, 255, 255);
-      z-index: 1;
-      color: black;
-      padding: 10px 0; /* Adjust padding as needed */
-      border-radius: 15px;
-    }
-    .dropmentlogomainpage {
-      margin-right: 0px;
-    }
-    
-    .dropmentlogomainpage img {
-      max-height: 80px; /* Adjust as needed */
-    }
-    
-    .dropmentmainbtns {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    
-    .dropmentmainbtns button {
-      margin: 0 8px; /* Adjust margin as needed */
-      background-color: transparent;
-      border: 1px solid transparent;
-      cursor: pointer;
-      border-radius: 9px;
-      color: rgb(255, 255, 255);
-    }
-    .dropmentmainbtns img {
-      width: 30px;
-    }
-    
-    .section1inmainpage {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      width: 100%;
-      padding: 20px;
-    }
-    
-    .content-container {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      width: 100%;
-      max-width: 1200px; /* Adjust as needed */
-    }
-    
-    .left-content {
-      flex: 1;
-      max-width: 300px; /* Adjust as needed */
-      margin-right: 20px;
-    }
-    
-    .middle-content {
-      flex: 3;
-    }
-    
-    .right-content {
-      flex: 1;
-      max-width: 300px; /* Adjust as needed */
-      margin-left: 20px;
-    }
-    
-    .recomprofilemainpagetxtp,
-    .recomprofilemainpagetxt {
-      color: grey;
-      text-align: center;
-    }
-    
-    /* Media Query for tablets */
-      .dropmentmainbtns button {
-        margin-left: 5px; /* Adjust button spacing for tablets */
-      }
-    
-      .left-content,
-      .right-content {
-        max-width: 100%; /* Occupy full width on tablets */
-        margin: 0; /* Remove margin on tablets */
-  }
-  .add-shop-btn-home-header {
-    background-color: transparent;
-    color: #06d6a0;
-    border: 1px solid #333;
-    padding: 10px 20px;
-    border-radius: 9px;
-  }
-  
-  }
-  @media (min-width: 769px) and (max-width: 1024px) {
-    .maindivefordropmentmainpage {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: black;
-    }
-    
-    /* Header styles */
-    .dropmentmainheader {
-      width: 100%;
-      background-color: #000000;
-      box-shadow: 0 1px 1px rgb(255, 255, 255);
-      z-index: 1;
-      color: black;
-      padding: 10px 0; /* Adjust padding as needed */
-      border-radius: 15px;
-    }
-    
-    /* Logo styles */
-    .dropmentlogomainpage img {
-      max-height: 60px; /* Adjust as needed */
-    }
-    
-    /* Button container styles */
-    .dropmentmainbtns {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 10px; /* Adjust margin as needed */
-    }
-    
-    /* Buttons styles */
-    .dropmentmainbtns button {
-      margin: 0 8px; /* Adjust margin as needed */
-      background-color: transparent;
-      border: 1px solid transparent;
-      cursor: pointer;
-      border-radius: 9px;
-      color: rgb(255, 255, 255);
-    }
-    .dropmentmainbtns img {
-      width: 30px;
-    }
-    
-    /* Style for specific element */
-    .createstorebtnmainpg {
-      /* Style for ChatMessageapp */
-    }
-    
-    /* Section 1 styles */
-    .section1inmainpage {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      width: 100%;
-      padding: 20px 0; /* Adjust padding as needed */
-    }
-    
-    /* Content container styles */
-    .content-container {
-      display: flex;
-      justify-content: space-around; /* Adjust as needed */
-      align-items: flex-start;
-      width: 100%;
-      max-width: 1200px;
-    }
-    
-    /* Content columns */
-    .left-content,
-    .right-content {
-      flex: 1;
-      max-width: 300px; /* Adjust as needed */
-      margin: 0 10px; /* Adjust margin as needed */
-    }
-    
-    .middle-content {
-      flex: 3;
-    }
-    
-    /* Recommended profile text */
-    .recomprofilemainpagetxtp {
-      color: grey;
-      text-align: center;
-    }
-    
-    /* Button styles for main page */
-    .blinkfeed-btn-main-pg button {
-      background-color: transparent;
-      color: white;
-      border: 2px solid #333;
-      border-radius: 25px;
-      padding: 10px 20px;
-      margin-top: 10px;
-      transition: background-color 0.3s, color 0.3s, border-color 0.3s;
-      cursor: pointer;
-    }
-    
-    /* Button hover effect */
-    .blinkfeed-btn-main-pg button:hover {
-      background-color: transparent;
-      color: #6184D8;
-    }
-    
-    /* Add shop button on main page */
-    .add-shop-btn-main-page-dropment button {
-      color: white;
-      background-color: #3a0299;
-      border: 2px solid #3a0299;
-      border-radius: 9px;
-      padding: 10px 20px;
-    }
-    
-    /* Mobile button display in header */
-    .mboile-btn-display-home-headre {
-      display: none;
-    }
-    .add-shop-btn-home-header {
-      background-color: transparent;
-      color: #06d6a0;
-      border: 1px solid #333;
-      padding: 10px 20px;
-      border-radius: 9px;
-    }
-    
-  }
-  
-  @media (min-width: 1025px) {
-    .maindivefordropmentmainpage {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: black;
-    }
-    
-    /* Header styles */
-    .dropmentmainheader {
-      width: 100%;
-      background-color: #000000;
-      box-shadow: 0 1px 1px rgb(255, 255, 255);
-      z-index: 1;
-      color: black;
-      padding: 10px 0; /* Adjust padding as needed */
-      border-radius: 15px;
-    }
-    
-    /* Logo styles */
-    .dropmentlogomainpage img {
-      max-height: 60px; /* Adjust as needed */
-    }
-    
-    /* Button container styles */
-    .dropmentmainbtns {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 10px; /* Adjust margin as needed */
-    }
-    
-    /* Buttons styles */
-    .dropmentmainbtns button {
-      margin: 0 8px; /* Adjust margin as needed */
-      background-color: transparent;
-      border: 1px solid transparent;
-      cursor: pointer;
-      border-radius: 9px;
-      color: rgb(255, 255, 255);
-    }
-    .dropmentmainbtns img {
-      width: 30px;
-    }
-    
-    /* Style for specific element */
-    .createstorebtnmainpg {
-      /* Style for ChatMessageapp */
-    }
-    
-    /* Section 1 styles */
-    .section1inmainpage {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      width: 100%;
-      padding: 20px 0; /* Adjust padding as needed */
-    }
-    
-    /* Content container styles */
-    .content-container {
-      display: flex;
-      justify-content: space-around; /* Adjust as needed */
-      align-items: flex-start;
-      width: 100%;
-      max-width: 1200px;
-    }
-    
-    /* Content columns */
-    .left-content,
-    .right-content {
-      flex: 1;
-      max-width: 300px; /* Adjust as needed */
-      margin: 0 10px; /* Adjust margin as needed */
-    }
-    
-    .middle-content {
-      flex: 3;
-    }
-    
-    /* Recommended profile text */
-    .recomprofilemainpagetxtp {
-      color: grey;
-      text-align: center;
-    }
-    
-    /* Button styles for main page */
-    .blinkfeed-btn-main-pg button {
-      background-color: transparent;
-      color: white;
-      border: 2px solid #333;
-      border-radius: 25px;
-      padding: 10px 20px;
-      margin-top: 10px;
-      transition: background-color 0.3s, color 0.3s, border-color 0.3s;
-      cursor: pointer;
-    }
-    
-    /* Button hover effect */
-    .blinkfeed-btn-main-pg button:hover {
-      background-color: transparent;
-      color: #ffffff;
-    }
-    
-    /* Add shop button on main page */
-    .add-shop-btn-main-page-dropment button {
-      color: #06d6a0;
-      background-color: transparent;
-      border: 2px solid #06d6a0;
-      cursor: pointer;
-      border-radius: 9px;
-      padding: 10px 20px;
-    }
-    
-    /* Mobile button display in header */
-    .mboile-btn-display-home-headre {
-      display: none;
-    }
-    .add-shop-btn-home-header {
-      background-color: transparent;
-      color: #06d6a0;
-      padding: 10px 25px;
-      border: 1px solid #333;
-      border-radius: 9px;
-    }
-    
-  }
+/* Sidebar.css */
+.sidebar {
+  height: 100vh; /* Full viewport height */
+  width: 140px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: black;
+  overflow-x: hidden;
+  padding-top: 20px;
+  border-right: 1px solid white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.logout-btn-mainpage {
+  background-color: transparent;
+  color: red;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.login-btn-mainpage {
+  background-color: transparent;
+  color: green;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.sidebar img {
+  width: 50px;
+  margin-bottom: 50px;
+}
+
+.sidebar p {
+  padding: 10px;
+  margin: 0;
+  width: 100%;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.sidebar p:hover {
+  background-color: #333;
+}
+.notification-popup {
+  position: fixed;
+  top: 0;
+  right: -300px; /* Initially hide notification off-screen */
+  width: 300px;
+  height: 100vh;
+  transition: right 0.3s ease-in-out; /* Apply transition effect */
+}
+
+.notification-popup.show {
+  right: 0; /* Slide the notification to the visible position */
+}
 body {
   background-color: black;
 }
@@ -506,165 +79,4 @@ h3 {
 }
  h2 {
   color: white;
-}
-
-.middle-content {
-  text-align: center;
-}
-
-.button-container {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px; /* Add some margin if needed */
-}
-
-.button-container button {
-  margin: 0 10px; /* Adjust the spacing between buttons */
-  padding: 8px 16px;
-  border: 1px solid #333;
-  border-radius: 5px;
-  color: #333;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.button-container button.active {
-  background-color: transparent; /* Change to your active button color */
-  font-weight: bold; /* Optionally make the text bold */
-  border: 1px solid #333;
-  color: white;
-}
-
-.add-shop-btn-main-page-dropment {
-  text-align: center;
-}
-
-
-
-
-
-
-
-/* Hamburger Icon Styles */
-/* Mobile Menu Icon Styles */
-.mobile-menu-icon {
-  display: none; /* Hide by default on larger screens */
-  cursor: pointer;
-}
-
-.mobile-menu-icon .line {
-  width: 25px;
-  height: 3px;
-  background-color: white;
-  margin: 4px 0;
-}
-
-/* Mobile Menu Styles */
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: -250px; /* Initial position off the screen */
-  width: 250px;
-  height: 100%;
-  background-color: #333; /* Change as needed */
-  transition: left 0.3s ease; /* Smooth slide transition */
-  z-index: 1000; /* Ensure it's above other content */
-  padding-top: 80px; /* Adjust padding as needed */
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3); /* Adding a subtle shadow */
-}
-
-.mobile-menu.show {
-  left: 0; /* Slide in when 'showMenu' state is true */
-}
-
-.mobile-menu button {
-  display: block;
-  width: 100%;
-  padding: 15px 20px;
-  border: none;
-  background-color: transparent;
-  color: white;
-  text-align: left;
-  text-decoration: none;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-
-.mobile-menu button:hover {
-  background-color: #555; /* Darken background on hover */
-}
-
-.mobile-menu button img {
-  width: 20px;
-  height: 20px;
-  margin-left: 10px;
-  vertical-align: middle;
-}
-.add-shop-btn-mobile-btn-home-page-dropment {
-  background-color: transparent;
-  color: #06d6a0;
-  border: 1px solid #06d6a0;
-  cursor: pointer;
-  margin-left: 2px;
-  padding: 8px;
-  border-radius: 9px;
-}
-.all-screen-header-menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-}
-
-.all-screen-header-menu button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 15px;
-  border: 1px solid transparent;
-  border-radius: 5px;
-  background-color: transparent;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.all-screen-header-menu button:hover {
-  border: 1px solid #333;
-  color: white;
-}
-
-.all-screen-header-menu button img {
-  width: 20px;
-  height: 20px;
-  margin-left: 8px; /* Adjust margin as needed */
-  vertical-align: middle;
-}
-/* Media Query for Mobile */
-@media screen and (max-width: 768px) {
-  .mobile-menu-icon {
-    display: block; /* Show on smaller screens */
-  }
-
-  /* Hide other header elements on smaller screens */
-  .mobile-btns-home-dropment  {
-    text-align: center;
-  }
-  .all-screen-header-menu {
-    display: none;
-  }
-
-  .mobile-btns-home-dropment-notri {
-    background-color: #333;
-    color: white;
-    border-radius: 9px;
-    padding: 8px;
-    margin-right: 2px;
-    border: 1px solid #333;
-    cursor: pointer;
-  }
-
-
-  /* Additional styling for mobile menu */
 }
