--- a/src/home/mainpage/template1/template1.css
+++ b/src/home/mainpage/template1/template1.css
@@ -7,6 +7,7 @@
   align-items: center;
   min-height: 35vh;
   margin-bottom: 30px;
+  margin-left: 50px;
 }
 
 .shop-card {
@@ -14,7 +15,7 @@
   background-color: #121212; /* Darker background */
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.1); /* Subtle white shadow */
-  width: 50%; /* Adjusted width */
+  width: 60%; /* Adjusted width */
   max-width: 100%;
   color: #fff; /* White text */
   display: flex;
