--- a/src/home/addnewshop/addshop.css
+++ b/src/home/addnewshop/addshop.css
@@ -19,14 +19,18 @@
 
 .headerButtons-shop-builder {
   display: flex;
+  text-align: center;
 }
 
 .navButton-shop-builder,
 .backButton-shop-builder {
   margin-right: 10px;
   padding: 8px 16px;
+  text-align: center;
   font-size: 16px;
   border: none;
+  margin-top: 8px;
+  margin-bottom: 8px;
   border-radius: 4px;
   cursor: pointer;
   color: #fff;
